--- a/caas-app/pom.xml
+++ b/caas-app/pom.xml
@@ -31,11 +31,11 @@
                         ${project.build.directory}/generated-sources/
                     </generatedSourcesDirectory>
                     <annotationProcessorPaths>
-                       <path>
+                        <path>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>caas-annotations</artifactId>
                             <version>0.0.1</version>
-                       </path>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
@@ -59,6 +59,16 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                         </configuration>
                     </execution>
                 </executions>
