--- a/caas-app/pom.xml
+++ b/caas-app/pom.xml
@@ -169,6 +169,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <properties>
         <auto-service.version>1.0-rc4</auto-service.version>
