--- a/caas-app/pom.xml
+++ b/caas-app/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.56</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
