--- a/caas-app/pom.xml
+++ b/caas-app/pom.xml
@@ -11,9 +11,7 @@
         <artifactId>caas</artifactId>
         <version>0.0.1</version>
     </parent>
-
-
-
+    
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -21,40 +19,41 @@
         </repository>
     </repositories>
 
-
-
     <dependencies>
-
-
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>caas-annotations</artifactId>
             <version>0.0.1</version>
         </dependency>
+
         <dependency>
-            <groupId>org.bitbucket.sco0ter.babbler</groupId>
+            <groupId>rocks.xmpp</groupId>
             <artifactId>xmpp-core-client</artifactId>
-            <version>160f882</version>
+            <version>0.8.1</version>
         </dependency>
+
         <dependency>
-            <groupId>org.bitbucket.sco0ter.babbler</groupId>
+            <groupId>rocks.xmpp</groupId>
             <artifactId>xmpp-extensions-client</artifactId>
-            <version>160f882</version>
+            <version>0.8.1</version>
         </dependency>
+
         <dependency>
             <groupId>de.measite.minidns</groupId>
             <artifactId>minidns-hla</artifactId>
             <version>0.2.4</version>
         </dependency>
+
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.56</version>
+            <version>1.65</version>
         </dependency>
+
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.1</version>
+            <version>2.8.6</version>
         </dependency>
 
         <dependency>
