--- a/caas-web/pom.xml
+++ b/caas-web/pom.xml
@@ -82,25 +82,13 @@
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.8.0</version>
+            <version>2.9.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-template-freemarker</artifactId>
             <version>2.7.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.sco0ter.babbler</groupId>
-            <artifactId>xmpp-core-client</artifactId>
-            <version>160f882</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.sco0ter.babbler</groupId>
-            <artifactId>xmpp-extensions-client</artifactId>
-            <version>160f882</version>
         </dependency>
 
         <dependency>
@@ -124,7 +112,13 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.20.0</version>
+            <version>3.30.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.6.0</version>
         </dependency>
 
         <dependency>
@@ -173,7 +167,7 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>3.1.0</version>
+            <version>3.4.3</version>
         </dependency>
 
         <dependency>
@@ -185,7 +179,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.197</version>
+            <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
 
